@@ -162,7 +162,14 @@ var foxreplace = {
    * Shows options dialog.
    */
   showOptions: function() {
-    window.openDialog("chrome://foxreplace/content/options.xul", "", "chrome,titlebar,toolbar,centerscreen,modal");
+    // Based on code from https://developer.mozilla.org/en-US/docs/XUL/School_tutorial/Handling_Preferences#Preference_windows
+    if (!this.prefs.optionsWindow) {
+      let instantApply = Application.prefs.get("browser.preferences.instantApply");
+      let features = "chrome,titlebar,toolbar,centerscreen" + (instantApply.value ? ",dialog=no" : ",modal");
+      window.openDialog("chrome://foxreplace/content/options.xul", "", features);
+    }
+
+    this.prefs.optionsWindow.focus();
   },
 
   /**
